# gribtoarrow

./: .gitignore  CMakeLists.txt  README.md  build.py  pyproject.toml  readme.md  setup.py
gribtoarrow/: __init__.py
pythonApi/: example_add_columns.py  example_conversions.py  example_filtering.py  example_filtering_message_id.py  example_with_locations.py  example_with_stations.py  grib_to_arrow.cpp
src/: arrowutils.cpp  arrowutils.hpp  caster.hpp  converter.cpp  converter.hpp  gribhelpers.cpp  gribhelpers.hpp  griblocationdata.cpp  griblocationdata.hpp  gribmessage.cpp  gribmessage.hpp  gribmessageiterator.cpp  gribmessageiterator.hpp  gribreader.cpp  gribreader.hpp  gridarea.cpp  gridarea.hpp
src/exceptions/: arrowgenericexception.hpp  arrowtablereadercreationexception.hpp  codesgetdoublevaluesasarrayexception.hpp  gribexception.hpp  invalidcsvexception.hpp  invalidschemaexception.hpp  memoryallocationexception.hpp  nosuchgribfileexception.hpp  nosuchlocationsfileexception.hpp  notsuchfileexception.hpp
tests/: badfile.csv  conftest.py  ecmwfaifs0h.grib  ecmwfaifs6h.grib  meps_weatherapi_sorlandet.grb  meps_weatherapi_sorlandet.grb.bz2  norkyst800m_weatherapi_west_norway.grb  norway.grb  test_add_columns.py  test_area_filters.py  test_attributes.py  test_conversions.py  test_dates.py  test_dodgy_file.py  test_exceptions.py  test_filtering_message_id.py  test_iteration.py  test_locations.csv  test_with_locations.py  test_with_stations.py
